--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		<link rel="manifest" href="/manifest.json">
 		<link rel="alternate" type="application/rss+xml" href="https://sirvitalas.github.io/rss.xml" title="My title">
 		<!--<script charset="UTF-8" src="//cdn.sendpulse.com/js/push/e11fa0b6d3392d3287037f4190b74d3d_1.js" async></script>-->
-        	<script charset="UTF-8" src="https://cdn.sendpulse.com/js/push/b0b46d4b80f3d877529f957a69b0c72c_1.js" async></script>
+        	<!--<script charset="UTF-8" src="https://cdn.sendpulse.com/js/push/b0b46d4b80f3d877529f957a69b0c72c_1.js" async></script>-->
 	</head>
 	
 <body>
